[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docx-flow"
version = "0.1.1"
description = "Fluent API for DOCX document manipulation with chainable select-and-apply operations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "DaDong"},
]
keywords = ["docx", "word", "document", "automation", "office"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = [
    "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["docx_flow"]

[project.urls]
Homepage = "https://github.com/PyBalance/docx-flow"
Repository = "https://github.com/PyBalance/docx-flow"
Issues = "https://github.com/PyBalance/docx-flow/issues"
